# Projeto_AM_Leandro

./: Dockerfile  README.md  pyproject.toml
data/: load_tabarena.py
docs/: INFRAESTRUTURA.md  datasets_selecionados.csv  tabarena_datasets.csv
experiments/: gerar_graficos_e_tabelas.py  gerar_graficos_eixos.py  gerar_optuna_exemplos.py  gerar_scatter_pareto.py  gerar_slides.py  run_experiment.py
experiments/cluster/: job_apuana.slurm
notebooks/: 01_eda.ipynb  02_demo_baselines.ipynb  03_demo_modelo_grupo.ipynb  04_demo_stats_regime.ipynb
reports/: model_card.md  relatorio_final.tex  slides_tabicl_v2.pptx
reports/templates/: TEMPLATE_model_card.md
results/data/: dataset_metadata.csv  final_run_results_v2.csv
results/statistical_analysis/: 01_Desempenho_Medio_Global.csv  02_Lista_30_Datasets.csv  03_Estratificacao_has_missing.csv  03_Estratificacao_regime.csv  03_Estratificacao_type.csv  bayesian_rope_ACC.csv  bayesian_rope_AUC_OVO.csv  bayesian_rope_CE.csv  bayesian_rope_G_Mean.csv  bayesian_rope_total_time_s.csv
results/tables/: tabelas_resultados.tex
src/models/: __init__.py  automl.py  baselines.py  group_model.py  tabicl_tuning.py
src/pipeline/: __init__.py  evaluate.py  regime.py  run_all.py  split.py  stats.py  tune.py
src/reports/: results_table.py
tests/: test_pipeline.py
